# 2024-P1-rike568

./: README.md  endpoints.http  pyproject.toml
todo/views/: routes.py
